# laughing-waffle

./: .gitignore  Cargo.toml  LICENSE  README.md
contracts/brunch-bash/: Cargo.toml
contracts/brunch-bash/src/: lib.rs  test.rs
contracts/brunch-bash/test_snapshots/test/: a_full_brunch_from_invitations_to_champion.1.json  judges_decline_charcoal_and_double_dipping.1.json  round_lifecycle_rules.1.json
contracts/griddle/: Cargo.toml
contracts/griddle/src/: lib.rs  test.rs
contracts/griddle/test_snapshots/test/: dawdling_mints_charcoal.1.json  empty_shelf_means_no_bake.1.json  golden_window_mints_a_scored_waffle.1.json  one_iron_per_baker_and_three_topping_limit.1.json  ribbon_without_contest_auth_panics.1.json  ribbons_only_from_the_contest.1.json  waffles_can_be_gifted_but_not_stolen.1.json
contracts/pantry/: Cargo.toml
contracts/pantry/src/: lib.rs  test.rs
contracts/pantry/test_snapshots/test/: consume_is_atomic_when_one_ingredient_is_short.1.json  consume_requires_wiring_and_sufficient_balance.1.json  consume_without_griddle_auth_panics.1.json  first_forage_includes_welcome_basket.1.json  forage_cooldown_is_enforced.1.json
contracts/types/: Cargo.toml
contracts/types/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vitest.integration.config.ts
frontend/src/: App.svelte  app.css
frontend/src/components/: BrunchBash.svelte  Griddle.svelte  Header.svelte  Pantry.svelte  Toasts.svelte  WaffleCard.svelte  WaffleGallery.svelte
frontend/src/lib/: contracts.test.ts  contracts.ts  game.svelte.ts  timing.test.ts  timing.ts  wallet.svelte.ts
frontend/tests/integration/: bakery.test.ts
