[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ElliotFriend/laughing-waffle"

[workspace.dependencies]
soroban-sdk = "26.1.0"
bakery-types = { path = "contracts/types" }
pantry = { path = "contracts/pantry" }
griddle = { path = "contracts/griddle" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
