[package]
name = "brunch-bash"
description = "The Brunch Bash: enter your waffle, sway the judges, take the pot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
bakery-types = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
pantry = { workspace = true }
griddle = { workspace = true }
